# codelet

./: .gitignore  CMakeLists.txt
cpp_skills/: CheckMethodExist.cpp  ClassTemplate.cpp  Decltype.cpp  Exception.cpp  MoveSemantics.cpp  ReturnObject.cpp  ReturnTuple.cpp  SmartPointer.cpp  TemplateMethod.cpp  Thread.cpp  constexpr.cpp
cpp_skills/TemplateMetaProgramming/: switch.cpp  switch.hpp  switch_impl.hpp
gof/: Adapter.cpp  Decorator.cpp  Flyweight.cpp  NullObject.cpp  SimpleBuilderPassPointer.cpp  SimpleBuilderPassReference.cpp  State.cpp  Strategy.cpp  StrategyTemplate.cpp
kata/: memo.txt
kata/MovieRental/: Customer.cpp  Customer.hpp  Movie.cpp  Movie.hpp  Rental.cpp  Rental.hpp  tests.cpp
util/AIXMemDumpParser/: AIXMemDumpParser.py
util/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Variable.cpp  Variable.h  testcases.cpp
util/HPMemLeak/: HPMemAnalyzer.py  HPMemLeakTracker.py
util/Hyun/: hyun_v_distribution
util/MemorySummator/: memsum.py
util/SudoPAWA/: pawa.py
util/TextToHTML/: HTMLfy.py  T6Manual_Lock_Type.htm  T6Manual_Lock_Type.txt~
util/network/: CMakeLists.txt  client.c  client.cpp  server.c  server.cpp  util.hpp
